@@ -1,7 +1,7 @@
 Release notes for SIP Express Router (ser)
 ***********************************************
 
-$Id: NEWS,v 1.75 2008/03/11 22:05:44 andrei Exp $
+$Id: NEWS,v 1.76 2008/03/31 06:35:57 bpintea Exp $
 
 
 
@@ -136,6 +136,9 @@ core:
                between the short name and long name in cache as CNAME record
 
 new config variables:
+  loadpath = <modules path> - directory where to load the modules from (-L
+     equivalent); modules can be loaded simply by specifying their name
+     (loadmodule "maxfwd")
   tcp_fd_cache = yes | no (default yes) - if enabled FDs used for sending
      will be cached inside the process calling tcp_send (performance increase
      for sending over tcp at the cost of slightly slower connection closing and
